[package]
name = "ct-logs"
version = "0.4.0"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
readme = "README.md"
license = "Apache-2.0/ISC/MIT"
description = "Google's list of Certificate Transparency logs for use with sct crate"
homepage = "https://github.com/ctz/ct-logs"
repository = "https://github.com/ctz/ct-logs"

[dependencies]
sct = { git = "https://github.com/briansmith/sct.rs.git", rev = "1d70fdae0d025efe0b0b185cb236a568d0cf1a5d" }
